--- a/project.css
+++ b/project.css
@@ -1,3 +1,5 @@
+/*Style for all the project page*/
+
 * {
     margin: 0;
     padding: 0;
@@ -14,28 +16,28 @@ body {
     min-height: 100vh;
 }
 
-/* Style de la scrollbar */
+
+/* Style for scrollbar */
+
 ::-webkit-scrollbar {
-    width: 12px; /* Largeur de la scrollbar */
+    width: 12px;
 }
 
-/* Style de la piste de la scrollbar */
 ::-webkit-scrollbar-track {
-    background: #081b29; /* Couleur de fond de la piste */
-    border-radius: 10px; /* Bordure arrondie */
+    background: #081b29;
+    border-radius: 10px;
 }
 
-/* Style du pouce de la scrollbar */
 ::-webkit-scrollbar-thumb {
-    background: #ededed; /* Couleur du pouce */
-    border-radius: 10px; /* Bordure arrondie */
-    border: 3px solid #081b29; /* Bordure autour du pouce */
+    background: #ededed;
+    border-radius: 10px;
+    border: 3px solid #081b29;
 }
 
-/* Style du pouce de la scrollbar lors du survol */
 ::-webkit-scrollbar-thumb:hover {
-    background: #fff; /* Couleur du pouce lors du survol */
+    background: #fff;
 }
+
 
 .project-details {
     display: flex;
@@ -45,6 +47,15 @@ body {
     margin-top: 3rem;
     border-radius: 10px;
     gap: 50px;
+}
+
+.project-exit p {
+    font-size: 20px;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+    white-space: nowrap;
+    margin-left: 3rem;
 }
 
 .project-exit img {
@@ -61,15 +72,6 @@ body {
 
 .go-back a {
     text-decoration: none;
-}
-
-.project-exit p {
-    font-size: 20px;
-    color: #fff;
-    font-weight: 500;
-    cursor: pointer;
-    white-space: nowrap;
-    margin-left: 3rem;
 }
 
 .project-details-title {
@@ -164,13 +166,7 @@ body {
     font-size: 14px;
     opacity: 0;
     animation: fadeIn 0.3s forwards;
-}
-
-@keyframes fadeIn {
-    to {
-        opacity: 1;
-    }
-}  
+} 
 
 .github-link {
     right: 16rem; /* Ajustez cette valeur selon la taille de la marge souhaitée */
@@ -305,3 +301,9 @@ footer p {
         display: none;
     }
 }
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+} 
