--- a/style.css
+++ b/style.css
@@ -895,7 +895,16 @@ footer p {
     }
 
     #layer-latest-project h5{
-        font-size: 20px;
+        font-size: 18px;
+    }
+
+    #layer-latest-project p{
+        font-size: 14px;
+    }
+
+    #layer-latest-project i{
+        width: 50px;
+        height: 50px;
     }
 
     .about{
